k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chainlit-chatbot
  labels:
    app: chainlit-chatbot
  annotations:
    argocd-image-updater.argoproj.io/image-list: trieule0801/chainlit-chatbot
    argocd-image-updater.argoproj.io/write-back-method: git
    argocd-image-updater.argoproj.io/trieule0801.chainlit-chatbot.update-strategy: latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chainlit-chatbot
  template:
    metadata:
      labels:
        app: chainlit-chatbot
    spec:
      containers:
      - name: chainlit-chatbot
        imagePullPolicy: Always

        image: trieule0801/chainlit-chatbot:v1.0.4   # You already built and pushed this
        ports:
        - containerPort: 7860
        # envFrom:
        # - secretRef:
        #     name: chatbot-env
        command: ["/bin/bash", "-c", "export PYTHONPATH=. && chainlit run ui/main.py --host 0.0.0.0 --port 7860"]
